commit after home work

--- a/sample3.html
+++ b/sample3.html
@@ -753,7 +753,7 @@ arc2 = d3.svg.arc()
 //CREATE PIES
 re.append("path")
 .attr("class",function(d) {return "surface "+d.name})
-.style("fill","#2FBAB2");
+.style("fill","#7ABC7A");
 
 re.selectAll("path.surface")
 .attr("d", arc)
